# pycalphad-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
0-First-Examples/: BinaryExamples.ipynb  BinaryExamples.py
00-First-Examples/: BinaryExamples.ipynb  BinaryExamples.py
01-Aluminium-Zinc-exploration/: al-zn-phase-diagram-1.py  al-zn-phase-diagram-2.html  al-zn-phase-diagram-2.py  al-zn-phase-diagram.html  al-zn-phase-diagram.py
