[project]
name = "pycalphad-playground"
version = "0.1.0"
description = "A set of experiments using pycalphad"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo (>=0.13.15,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
