[project]
name = "pycalphad-playground"
version = "0.1.0"
description = "A set of experiments using pycalphad"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "marimo (>=0.20.0,<0.21.0)",
    "pycalphad (>=0.11.0,<0.12.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ruff (>=0.15.5,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
